// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PersonalityDimensionList renders columns if details disabled 1`] = `
<div
  className="container"
>
  <div
    className="container"
  >
    <p>
      dimension_description, [object Object]
    </p>
    <ul
      className="columns"
    >
      <li
        className="container"
      >
        <div>
          <div
            className="icon"
            style={
              {
                "background": "rgba(0,0,0,0.085)",
                "border": "3px solid #000000",
              }
            }
          >
            <img
              alt="Openness badge, [object Object]"
              src="https://cdn.traitify.com/icons/big-five/dimensions/black/openness.png"
            />
          </div>
          <h3>
            Openness
          </h3>
          <h2>
            Medium
          </h2>
        </div>
        <div
          className="background medium"
          style={
            {
              "background": "rgba(0,0,0,0.1)",
            }
          }
        />
      </li>
      <li
        className="container"
      >
        <div>
          <div
            className="icon"
            style={
              {
                "background": "rgba(0,0,0,0.085)",
                "border": "3px solid #000000",
              }
            }
          >
            <img
              alt="Conscientiousness badge, [object Object]"
              src="https://cdn.traitify.com/icons/big-five/dimensions/black/conscientiousness.png"
            />
          </div>
          <h3>
            Conscientiousness
          </h3>
          <h2>
            Medium
          </h2>
        </div>
        <div
          className="background medium"
          style={
            {
              "background": "rgba(0,0,0,0.1)",
            }
          }
        />
      </li>
      <li
        className="container"
      >
        <div>
          <div
            className="icon"
            style={
              {
                "background": "rgba(0,0,0,0.085)",
                "border": "3px solid #000000",
              }
            }
          >
            <img
              alt="Extraversion badge, [object Object]"
              src="https://cdn.traitify.com/icons/big-five/dimensions/black/extraversion.png"
            />
          </div>
          <h3>
            Extraversion
          </h3>
          <h2>
            Medium
          </h2>
        </div>
        <div
          className="background medium"
          style={
            {
              "background": "rgba(0,0,0,0.1)",
            }
          }
        />
      </li>
      <li
        className="container"
      >
        <div>
          <div
            className="icon"
            style={
              {
                "background": "rgba(0,0,0,0.085)",
                "border": "3px solid #000000",
              }
            }
          >
            <img
              alt="Agreeableness badge, [object Object]"
              src="https://cdn.traitify.com/icons/big-five/dimensions/black/agreeableness.png"
            />
          </div>
          <h3>
            Agreeableness
          </h3>
          <h2>
            Medium
          </h2>
        </div>
        <div
          className="background medium"
          style={
            {
              "background": "rgba(0,0,0,0.1)",
            }
          }
        />
      </li>
      <li
        className="container"
      >
        <div>
          <div
            className="icon"
            style={
              {
                "background": "rgba(0,0,0,0.085)",
                "border": "3px solid #000000",
              }
            }
          >
            <img
              alt="Emotional Stability badge, [object Object]"
              src="https://cdn.traitify.com/icons/big-five/dimensions/black/emotional_stability.png"
            />
          </div>
          <h3>
            Emotional Stability
          </h3>
          <h2>
            Medium
          </h2>
        </div>
        <div
          className="background medium"
          style={
            {
              "background": "rgba(0,0,0,0.1)",
            }
          }
        />
      </li>
    </ul>
    <div
      className="columnsBuffer"
    />
  </div>
</div>
`;

exports[`PersonalityDimensionList renders component 1`] = `
<div
  className="container"
>
  <div
    className="container"
  >
    <p>
      dimension_description, [object Object]
    </p>
    <ul
      className="columns"
    >
      <li
        className="container"
      >
        <div>
          <div
            className="icon"
            style={
              {
                "background": "rgba(0,0,0,0.085)",
                "border": "3px solid #000000",
              }
            }
          >
            <img
              alt="Openness badge, [object Object]"
              src="https://cdn.traitify.com/icons/big-five/dimensions/black/openness.png"
            />
          </div>
          <h3>
            Openness
          </h3>
          <h2>
            Medium
          </h2>
        </div>
        <div
          className="background medium"
          style={
            {
              "background": "rgba(0,0,0,0.1)",
            }
          }
        />
      </li>
      <li
        className="container"
      >
        <div>
          <div
            className="icon"
            style={
              {
                "background": "rgba(0,0,0,0.085)",
                "border": "3px solid #000000",
              }
            }
          >
            <img
              alt="Conscientiousness badge, [object Object]"
              src="https://cdn.traitify.com/icons/big-five/dimensions/black/conscientiousness.png"
            />
          </div>
          <h3>
            Conscientiousness
          </h3>
          <h2>
            Medium
          </h2>
        </div>
        <div
          className="background medium"
          style={
            {
              "background": "rgba(0,0,0,0.1)",
            }
          }
        />
      </li>
      <li
        className="container"
      >
        <div>
          <div
            className="icon"
            style={
              {
                "background": "rgba(0,0,0,0.085)",
                "border": "3px solid #000000",
              }
            }
          >
            <img
              alt="Extraversion badge, [object Object]"
              src="https://cdn.traitify.com/icons/big-five/dimensions/black/extraversion.png"
            />
          </div>
          <h3>
            Extraversion
          </h3>
          <h2>
            Medium
          </h2>
        </div>
        <div
          className="background medium"
          style={
            {
              "background": "rgba(0,0,0,0.1)",
            }
          }
        />
      </li>
      <li
        className="container"
      >
        <div>
          <div
            className="icon"
            style={
              {
                "background": "rgba(0,0,0,0.085)",
                "border": "3px solid #000000",
              }
            }
          >
            <img
              alt="Agreeableness badge, [object Object]"
              src="https://cdn.traitify.com/icons/big-five/dimensions/black/agreeableness.png"
            />
          </div>
          <h3>
            Agreeableness
          </h3>
          <h2>
            Medium
          </h2>
        </div>
        <div
          className="background medium"
          style={
            {
              "background": "rgba(0,0,0,0.1)",
            }
          }
        />
      </li>
      <li
        className="container"
      >
        <div>
          <div
            className="icon"
            style={
              {
                "background": "rgba(0,0,0,0.085)",
                "border": "3px solid #000000",
              }
            }
          >
            <img
              alt="Emotional Stability badge, [object Object]"
              src="https://cdn.traitify.com/icons/big-five/dimensions/black/emotional_stability.png"
            />
          </div>
          <h3>
            Emotional Stability
          </h3>
          <h2>
            Medium
          </h2>
        </div>
        <div
          className="background medium"
          style={
            {
              "background": "rgba(0,0,0,0.1)",
            }
          }
        />
      </li>
    </ul>
    <div
      className="columnsBuffer"
    />
  </div>
  <ul
    className="details"
  >
    <div
      className="mock"
    >
      PersonalityDimensionDetails
    </div>
    <div
      className="mock"
    >
      PersonalityDimensionDetails
    </div>
    <div
      className="mock"
    >
      PersonalityDimensionDetails
    </div>
    <div
      className="mock"
    >
      PersonalityDimensionDetails
    </div>
    <div
      className="mock"
    >
      PersonalityDimensionDetails
    </div>
  </ul>
</div>
`;

exports[`PersonalityDimensionList renders details if columns disabled 1`] = `
<div
  className="container"
>
  <ul
    className="details"
  >
    <div
      className="mock"
    >
      PersonalityDimensionDetails
    </div>
    <div
      className="mock"
    >
      PersonalityDimensionDetails
    </div>
    <div
      className="mock"
    >
      PersonalityDimensionDetails
    </div>
    <div
      className="mock"
    >
      PersonalityDimensionDetails
    </div>
    <div
      className="mock"
    >
      PersonalityDimensionDetails
    </div>
  </ul>
</div>
`;

exports[`PersonalityDimensionList renders nothing if disabled 1`] = `null`;

exports[`PersonalityDimensionList renders nothing if results not ready 1`] = `null`;
